--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:y7uIzpA2TqspNAIG5i7N/lVtFd6do3HlmzglGLZgyn0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=tiger
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=homeweb72@gmail.com
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=homeweb72@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -47,3 +47,18 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_ADMIN_EMAIL=admin@homeweb.com
+API_ADMIN_PASSWORD=12345678
+API_CUSTOMER_EMAIL=customer@homeweb.com
+API_CUSTOMER_PASSWORD=12345678
+API_EMPLOYEE_EMAIL=employee@homeweb.com
+API_EMPLOYEE_PASSWORD=12345678
+API_OWNER_EMAIL=owner@homeweb.com
+API_OWNER_PASSWORD=12345678
+API_OWNER1_EMAIL=owner1@homeweb.com
+API_OWNER1_PASSWORD=12345678
+API_CUSTOMER1_EMAIL=customer1@homeweb.com
+API_CUSTOMER1_PASSWORD=12345678
+API_EMPLOYEE1_EMAIL=employee1@homeweb.com
+API_EMPLOYEE1_PASSWORD=12345678
