--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .idea/
+
+### Docker ###
+/docker/mysql/data/*
+!/docker/mysql/data/.gitkeep
+/docker/webserver/logs/*
+!/docker/webserver/logs/.gitkeep
