--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,10 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=localhost
-DB_HOST=127.0.0.1
+# Host local environment
+# DB_HOST=127.0.0.1
+# Host docker environment
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=homeweb
 DB_USERNAME=homeweb
