--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=localhost
+DB_CONNECTION=mysql
 # Host local environment
 # DB_HOST=127.0.0.1
 # Host docker environment
