--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,10 @@ yarn-error.log
 ### Docker ###
 /docker/mysql/data/*
 !/docker/mysql/data/.gitkeep
+/docker/mysql/logs/*
+!/docker/mysql/logs/.gitkeep
+
 /docker/webserver/logs/*
 !/docker/webserver/logs/.gitkeep
+/docker/webserver/html/*
+!/docker/webserver/html/index.php
