--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,35 +5,36 @@ services:
     build:
       context: './docker/webserver/Dockerfile'
       dockerfile: './docker/webserver/Dockerfile'
-    container_name: '${COMPOSE_PROJECT_NAME}-webserver'
+    container_name: 'homeweb-backend-webserver'
     restart: 'always'
     ports:
-      - '${HOST_MACHINE_UNSECURE_HOST_PORT}:80'
-      - '${HOST_MACHINE_SECURE_HOST_PORT}:443'
+      - '8080:80'
     links:
       - 'mysql'
     volumes:
-      - '${PHP_INI}:/usr/local/etc/php/php.ini'
-      - '${VHOSTS_DIR}:/etc/apache2/sites-enabled'
-      - '${APACHE_LOG_DIR}:/var/log/apache2'
+      -  '.:/var/www/html/homeweb-backend'
+      - './docker/webserver/config/php/php.ini:/usr/local/etc/php/php.ini'
+      - './docker/webserver/vhosts:/etc/apache2/sites-enabled'
+      - './docker/webserver/logs:/var/log/apache2'
+      - './docker/webserver/deploy:/var/www/html/deploy'
     environment:
-      APACHE_DOCUMENT_ROOT: '${APACHE_DOCUMENT_ROOT}'
-      MYSQL_ROOT_PASSWORD: '${DOCKER_DB_ROOT_PASSWORD}'
+      APACHE_DOCUMENT_ROOT: '/var/www/html'
+      MYSQL_ROOT_PASSWORD: 'root.secret'
   mysql:
     build:
       context: './docker/mysql/Dockerfile'
       dockerfile: './docker/mysql/Dockerfile'
-    container_name: '${COMPOSE_PROJECT_NAME}-database'
+    container_name: 'homeweb-backend-database'
     restart: 'always'
     ports:
-      - "127.0.0.1:${HOST_MACHINE_MYSQL_PORT}:3306"
+      - "127.0.0.1:6033:3306"
     volumes:
-      - '${MYSQL_DATA_DIR}:/var/lib/mysql'
-      - '${MYSQL_LOG_DIR}:/var/log/mysql'
-      - '${MYSQL_INIT_SQL}:/tmp/database'
+      - './docker/mysql/data:/var/lib/mysql'
+      - './docker/mysql/logs:/var/log/mysql'
+      - './docker/mysql/init:/tmp/database'
     command: 'mysqld --init-file="/tmp/database/init_db.sql"'
     environment:
-      MYSQL_ROOT_PASSWORD: '${DOCKER_DB_ROOT_PASSWORD}'
-      MYSQL_DATABASE: '${DOCKER_DB_DATABASE}'
-      MYSQL_USER: '${DOCKER_DB_USERNAME}'
-      MYSQL_PASSWORD: '${DOCKER_DB_PASSWORD}'
+      MYSQL_ROOT_PASSWORD: 'root.secret'
+      MYSQL_DATABASE: 'homeweb'
+      MYSQL_USER: 'homeweb'
+      MYSQL_PASSWORD: 'homeweb.secret'
