Update .gitignore and push test images to be displayed on frontend.

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .idea/
-
-### Docker ###
-/docker/mysql/data/*
-!/docker/mysql/data/.gitkeep
-/docker/webserver/logs/*
-!/docker/webserver/logs/.gitkeep
+/docker
