--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# Host local environment
-# DB_HOST=127.0.0.1
-# Host docker environment
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homeweb
 DB_USERNAME=homeweb
